# SlicerMRunner

./: .gitignore  CMakeLists.txt  Readme.md
MRunner/: CMakeLists.txt  MRunner.py  Repo.py
MRunner/Resources/Dockerfiles/: models.json  repo.json
MRunner/Resources/Dockerfiles/Thresholder/: Dockerfile  dicomsort.sh  environment.yaml
MRunner/Resources/Dockerfiles/TotalSegmentator/: Dockerfile
MRunner/Resources/MHub/: models.json
MRunner/Resources/SegDB/: categories.csv  modifyers.csv  segmentations.csv  types.csv
MRunner/Resources/UI/: MRunner.ui
MRunner/Utils/: Models.py  Repo.py  SegDB.py
MRunner/ymldicomseg/: ymlsegclass.py
MRunner/ymldicomseg/data/: categories.csv
